fixed some positioning and z-indexes

--- a/my-app/src/components/checkout/details/CheckoutDetails.module.css
+++ b/my-app/src/components/checkout/details/CheckoutDetails.module.css
@@ -6,7 +6,7 @@
 .h1 {
 	color: hsl(220, 13%, 13%);
 	font-size: 1.8rem;
-	margin-bottom: 1em;
+	margin-bottom: 1.5em;
 }
 
 .h2 {
@@ -43,6 +43,7 @@
 	font-size: 0.9rem;
 	border-radius: 8px;
 	border: 2px solid rgba(0, 0, 0, 0.5);
+	min-height: 43px;
 	outline: none;
 	transition: border-color 0.3s, box-shadow 0.3s;
 }
@@ -58,22 +59,33 @@
 
 .fieldset {
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-start;
+	gap: 1.5em;
 	width: 100%;
 	flex-wrap: wrap;
 	border: none;
 }
 
 .legend {
-	font-size: 1.1rem;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
+}
+
+.radio-inputs-container {
+	aspect-ratio: 2 / 1;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: calc(100% / 3 - 1.5em);
+	max-width: 150px;
+	z-index: 0;
 }
 
 .hero-bg {
 	position: absolute;
 	top: 0;
 	left: 0;
-	opacity: 0.5;
+	opacity: 0.4;
 	width: 100%;
 	height: 100%;
 	background-size: cover;
@@ -116,7 +128,6 @@
 	color: hsl(223, 64%, 98%);
 	text-shadow: 0px 1px 3px #000;
 	transition: font-size 0.3s, color 0.3s;
-	z-index: 5;
 }
 
 .radio-inputs-container:hover .radio-input-label,
@@ -136,17 +147,8 @@
 	color: hsl(26, 100%, 55%);
 }
 
-.img-container {
-	position: relative;
-	width: 100%;
-}
-
-.radio-inputs-container {
-	height: 50px;
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 30%;
-	gap: 0.5em;
+@media (min-width: 992px) {
+	.inputs-container {
+		width: 30%;
+	}
 }
